--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -191,6 +191,10 @@
     <Compile Include="Migrations\201902110524533_removeSystemDiagram.Designer.cs">
       <DependentUpon>201902110524533_removeSystemDiagram.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902110527526_AddExtraProperties.cs" />
+    <Compile Include="Migrations\201902110527526_AddExtraProperties.Designer.cs">
+      <DependentUpon>201902110527526_AddExtraProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Booking.cs" />
@@ -324,6 +328,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902110524533_removeSystemDiagram.resx">
       <DependentUpon>201902110524533_removeSystemDiagram.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902110527526_AddExtraProperties.resx">
+      <DependentUpon>201902110527526_AddExtraProperties.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
