--- a/TeamProject/Web.config
+++ b/TeamProject/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TeamProject-20190210100007.mdf;Initial Catalog=aspnet-TeamProject-20190210100007;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="data source=.\sqlexpress;initial catalog=ProjectDB;user id=sa;password=1234;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="data source=ra1.anystream.eu,1010;initial catalog=xiros_george;user id=sa;password=aDifficultPassword$;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
