--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -184,6 +184,10 @@
     <Compile Include="Migrations\201902110711423_InitializeDB.Designer.cs">
       <DependentUpon>201902110711423_InitializeDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902111727235_InitializeDB1.cs" />
+    <Compile Include="Migrations\201902111727235_InitializeDB1.Designer.cs">
+      <DependentUpon>201902111727235_InitializeDB1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Booking.cs" />
@@ -310,6 +314,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201902110711423_InitializeDB.resx">
       <DependentUpon>201902110711423_InitializeDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902111727235_InitializeDB1.resx">
+      <DependentUpon>201902111727235_InitializeDB1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
