--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -188,6 +188,10 @@
     <Compile Include="Migrations\201902111727235_InitializeDB1.Designer.cs">
       <DependentUpon>201902111727235_InitializeDB1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902111816203_InitializeDB2.cs" />
+    <Compile Include="Migrations\201902111816203_InitializeDB2.Designer.cs">
+      <DependentUpon>201902111816203_InitializeDB2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Booking.cs" />
@@ -317,6 +321,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902111727235_InitializeDB1.resx">
       <DependentUpon>201902111727235_InitializeDB1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902111816203_InitializeDB2.resx">
+      <DependentUpon>201902111816203_InitializeDB2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
