--- a/TeamProject/Web.config
+++ b/TeamProject/Web.config
@@ -70,10 +70,14 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="ConnectionString" connectionString="data source=.\sqlexpress;initial catalog=projectdb;user id=sa;password=1234;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
 
     <add name="ApplicationDbContext" connectionString="data source=.\sqlexpress;initial catalog=ProjectDB;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
+  <connectionStrings>
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TeamProject-20190210100007.mdf;Initial Catalog=aspnet-TeamProject-20190210100007;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="ConnectionString" connectionString="data source=ra1.anystream.eu,1010;initial catalog=xiros_george;user id=sa;password=aDifficultPassword$;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
