--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\TableManager.cs" />
     <Compile Include="Models\TimeSlot.cs" />
+    <Compile Include="Models\ReviewManager.cs" />
     <Compile Include="Models\TimeSlotManager.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserManager.cs" />
