--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -144,7 +144,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="ModelsViews\NearestBrachView.cs" />
-    <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Booking.cs" />
     <Compile Include="Models\Branch.cs" />
     <Compile Include="Models\BranchManager.cs" />
@@ -156,6 +155,7 @@
     <Compile Include="Models\ProjectDbContext.cs" />
     <Compile Include="Models\Review.cs" />
     <Compile Include="Models\BookingManager.cs" />
+    <Compile Include="Models\RoleManager.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\TableManager.cs" />
     <Compile Include="Models\TimeSlot.cs" />
