--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -186,6 +186,7 @@
     </Compile>
     <Compile Include="ModelsViews\BookViewModel.cs" />
     <Compile Include="ModelsViews\NearestBrachView.cs" />
+    <Compile Include="ModelsViews\PutBookModel.cs" />
     <Compile Include="ModelsViews\TimeslotApiView.cs" />
     <Compile Include="Models\Booking.cs" />
     <Compile Include="Models\Branch.cs" />
