Court view fixes

--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -290,6 +290,7 @@
     <Content Include="Images\Courts\Rouf1.jpg" />
     <Content Include="Images\Courts\Rouf2.jpg" />
     <Content Include="Images\Courts\Rouf3.jpg" />
+    <Content Include="Images\Courts\testCourt.jpg" />
     <Content Include="Images\Courts\VurwnasCourt.jpg" />
     <Content Include="Images\Courts\ZwgrafouCourt1.jpg" />
     <Content Include="Images\Courts\αρχείο λήψης.jpg" />
